--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
     <title>Frontend Mentor | E-commerce product page</title>
   </head>
   <body>
+    <header>
+      <nav class="main-nav">
+        <ul class="main-nav-ul">
+          <li><img src="./images/logo.svg" alt="" /></li>
+          <li>Collecitons</li>
+          <li>Men</li>
+          <li>Women</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+        <ul class="account-nav">
+          <li><img src="./images/icon-cart.svg" alt="" /></li>
+          <li><img class="avatar" src="./images/image-avatar.png" alt="" /></li>
+        </ul>
+      </nav>
+      <hr />
+    </header>
     Collections Men Women About Contact Sneaker Company Fall Limited Edition
     Sneakers These low-profile sneakers are your perfect casual wear companion.
     Featuring a durable rubber outer sole, they’ll withstand everything the
