image thumbnails are now clickable

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <div class="main-image-container">
             <img
               class="product-image"
+              id="main-product-image"
               src="./images/image-product-1.jpg"
               alt=""
             />
