Added hamburger mobile button and minimum height for navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <nav class="main-nav">
-        <img src="./images/logo.svg" alt="" />
+        <img src="./images/logo.svg" class="brand-logo" alt="" />
         <ul class="main-nav-ul desktop-nav-wrap">
           <li><a href="">Collections</a></li>
           <li><a href="">Men</a></li>
@@ -27,7 +27,11 @@
           <li><a href="">Contact</a></li>
         </ul>
         <button id="slide-mobile" class="account-nav mobile-nav-button">
-          ShowMobile
+          <div class="hamburger-button">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
         </button>
         <ul class="account-nav desktop-nav-wrap">
           <li><img src="./images/icon-cart.svg" alt="" /></li>
@@ -39,7 +43,7 @@
         <header class="mobile-nav-header">
           <div class="li-brand"><img src="./images/logo.svg" alt="" /></div>
           <button id="close-mobile" class="account-nav mobile-nav-button">
-            ShowMobile
+            X
           </button>
         </header>
         <ul class="mobile-nav-ul">
