Added a cart preview. Button is brought in the code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
         </ul>
         <ul class="account-nav">
           <li><img src="./images/icon-cart.svg" alt="" /></li>
-          <li><img class="avatar" src="./images/image-avatar.png" alt="" /></li>
+          <li class="avatar-container">
+            <img
+              id="avatar"
+              class="avatar"
+              src="./images/image-avatar.png"
+              alt=""
+            />
+            <div id="cart-preview" class="cart-preview">
+              <h3>Cart</h3>
+              <div class="cart-info">Your cart is empty</div>
+            </div>
+          </li>
         </ul>
       </nav>
 
