--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <title>Frontend Mentor | E-commerce product page</title>
   </head>
   <body>
+    <div id="toast-message" class="toast-message">
+      <h3>Message</h3>
+    </div>
     <header>
       <nav class="main-nav">
         <button id="slide-mobile" class="mobile-nav-button">
@@ -46,7 +49,27 @@
         </ul>
         <div id="cart-preview" class="cart-preview">
           <h3>Cart</h3>
-          <div class="cart-info">Your cart is empty</div>
+          <!-- <div class="cart-info">Your cart is empty</div> -->
+          <div class="cart-info">
+            <div class="shoe-cart-preview">
+              <img
+                class="product-thumbnail"
+                src="./images/image-product-1-thumbnail.jpg"
+                alt=""
+              />
+              <div class="cart-breakdown">
+                <div class="shoe-cart-desc">Fall Limited Edition Sneakers</div>
+                <div>
+                  <span class="product-price">$125.00</span> x
+                  <span class="product-qty">3</span>
+                  <span class="cart-total">$375.00</span>
+                </div>
+              </div>
+              <button class="checkout-delete">
+                <img src="./images/icon-delete.svg" alt="" />
+              </button>
+            </div>
+          </div>
         </div>
       </nav>
 
