Implemented basic cart code with javascript

--- a/index.html
+++ b/index.html
@@ -49,27 +49,7 @@
         </ul>
         <div id="cart-preview" class="cart-preview">
           <h3>Cart</h3>
-          <!-- <div class="cart-info">Your cart is empty</div> -->
-          <div class="cart-info">
-            <div class="shoe-cart-preview">
-              <img
-                class="product-thumbnail"
-                src="./images/image-product-1-thumbnail.jpg"
-                alt=""
-              />
-              <div class="cart-breakdown">
-                <div class="shoe-cart-desc">Fall Limited Edition Sneakers</div>
-                <div>
-                  <span class="product-price">$125.00</span> x
-                  <span class="product-qty">3</span>
-                  <span class="cart-total">$375.00</span>
-                </div>
-              </div>
-              <button class="checkout-delete">
-                <img src="./images/icon-delete.svg" alt="" />
-              </button>
-            </div>
-          </div>
+          <div id="cart-info" class="cart-info empty">Your cart is empty</div>
         </div>
       </nav>
 
